IDA plugin: handle user defined patterns in %APPDATA% (Windows) IDA plugin: Improved documentation and usability IDA plugin: now shows all matched nodes (print_all_matches)

--- a/src/IDA/grap/idagrap/ui/widgets/about.html
+++ b/src/IDA/grap/idagrap/ui/widgets/about.html
@@ -1,6 +1,7 @@
 <h1>grap TODO_GRAPVERSION</h1>
-grap matches graph patterns within binaries.
-It comes as a stand-alone CLI application (with a Capstone-based disassembler), as python bindings and as this IDA plugin.
+grap matches user-defined graph patterns within binaries.
+<br/>
+It exists as a stand-alone CLI application (with a Capstone-based disassembler), as python bindings and as this IDA plugin.
 <br />
 <a href="https://bitbucket.org/cybertools/grap/">https://bitbucket.org/cybertools/grap/</a>
 
@@ -10,12 +11,20 @@ It comes as a stand-alone CLI application (with a Capstone-based disassembler), 
 	<li>Since the Control Flow Graph (CFG) is created from the current IDA database, you might want to do it again later in the analysis process</li>
 </ul>
 
+Patterns files should have the .grapp extension and may be located:
+<ul>
+	<li>(Windows Only) in %APPDATA%\IDAgrap\patterns: user defined patterns</li>
+	<li>In an IDA plugin folder (for instance C:\Program Files\IDA 7.0\plugins\idagrap\patterns\test\misc\files): default patterns</li>
+</ul>
+
 <h2>Pattern Generation</h2>
 <ul>
 	<li>Within the <b>Pattern Generation</b> tab, first parse the CFG with the "Load CFG" button</li>
 	<li>Then, within IDA View, add a root node and target nodes (with a right click)</li>
-	<li>Click on "Generate a pattern" to see the pattern within the plugin view</li>
-	<li>You can save this pattern to a file and match from the <b>Pattern Search</b> tab</li>
+    <li>Intermediate nodes are automatically colored and the pattern text field is filled</li>
+	<li>Alternatively you can disable the "Auto update" option and click on "Generate a pattern" to generate a pattern</li>
+	<li>You can save the generated pattern to a file</li>
+    <li>The created pattern file can be matched from the <b>Pattern Search</b> tab</li>
 </ul>
 
 <h1>Credits</h1>
@@ -24,7 +33,7 @@ grap is an open source project being mostly developped by Airbus - CyberSecurity
 <h2>License</h2>
 grap is licensed under the MIT license. The full license text can be found in the file src/LICENSE on the repository.
 <h2>Icons</h2>
-The icons named icons8-* (see the ui/icons/ folder) in the IDA plugin:
+Most of the icons used in the IDA plugin (those named icons8-* in the ui/icons/ folder):
 <ul>
 	<li>come from icons8: <a href="https://icons8.com/">https://icons8.com/</a>,</li>
 	<li>are licensed under CC BY-ND - Creative Commons with attribution and no derivatives, see the full license here: <a href="https://creativecommons.org/licenses/by-nd/3.0/">https://creativecommons.org/licenses/by-nd/3.0/</a>.</li>
