Updated license information

--- a/src/IDA/grap/idagrap/ui/widgets/about.html
+++ b/src/IDA/grap/idagrap/ui/widgets/about.html
@@ -31,7 +31,10 @@ Patterns files should have the .grapp extension and may be located:
 grap is an open source project being mostly developped by Airbus - CyberSecurity (<a href="https://airbus-cyber-security.com/">https://airbus-cyber-security.com/</a>).
 
 <h2>License</h2>
-grap is licensed under the MIT license. The full license text can be found in the file src/LICENSE on the repository.
+grap is licensed under the MIT license.
+<br />
+The full license text should have been distributed with the software.
+It can be also found in the file src/LICENSE on the repository.
 <h2>Icons</h2>
 Most of the icons used in the IDA plugin (those named icons8-* in the ui/icons/ folder):
 <ul>
