Updated LICENSE path

--- a/src/IDA/grap/idagrap/ui/widgets/about.html
+++ b/src/IDA/grap/idagrap/ui/widgets/about.html
@@ -34,7 +34,7 @@ grap is an open source project being mostly developped by Airbus - CyberSecurity
 grap is licensed under the MIT license.
 <br />
 The full license text should have been distributed with the software.
-It can be also found in the file src/LICENSE on the repository.
+It can be also found in the file LICENSE on the repository.
 <h2>Icons</h2>
 Most of the icons used in the IDA plugin (those named icons8-* in the ui/icons/ folder):
 <ul>
