Fixed description texts and switch to v1.2.1

--- a/src/IDA/grap/idagrap/ui/widgets/about.html
+++ b/src/IDA/grap/idagrap/ui/widgets/about.html
@@ -3,7 +3,7 @@ grap matches user-defined graph patterns within binaries.
 <br/>
 It exists as a stand-alone CLI application (with a Capstone-based disassembler), as python bindings and as this IDA plugin.
 <br />
-<a href="https://github.com/AirbusCyber/grap/">https://github.com/AirbusCyber/grap/</a>
+<a href="https://github.com/QuoScient/grap/">https://github.com/QuoScient/grap/</a>
 
 <h2>Pattern Search</h2>
 <ul>
@@ -28,13 +28,14 @@ Patterns files should have the .grapp extension and may be located:
 </ul>
 
 <h1>Credits</h1>
-grap is an open source project being mostly developped by Airbus - CyberSecurity (<a href="https://airbus-cyber-security.com/">https://airbus-cyber-security.com/</a>).
+grap is an open source project.
 
 <h2>License</h2>
 grap is licensed under the MIT license.
 <br />
 The full license text should have been distributed with the software.
 It can be also found in the file LICENSE on the repository.
+
 <h2>Icons</h2>
 Most of the icons used in the IDA plugin (those named icons8-* in the ui/icons/ folder):
 <ul>
