Updated copyright mentions

--- a/src/IDA/grap/idagrap/ui/widgets/about.html
+++ b/src/IDA/grap/idagrap/ui/widgets/about.html
@@ -3,7 +3,7 @@ grap matches user-defined graph patterns within binaries.
 <br/>
 It exists as a stand-alone CLI application (with a Capstone-based disassembler), as python bindings and as this IDA plugin.
 <br />
-<a href="https://github.com/QuoScient/grap/">https://github.com/QuoScient/grap/</a>
+<a href="https://github.com/QuoSecGmbH/grap/">https://github.com/QuoSecGmbH/grap/</a>
 
 <h2>Pattern Search</h2>
 <ul>
